[gd_scene load_steps=5 format=3 uid="uid://fdlqojtnuyek"]

[ext_resource type="Script" path="res://src/GameManager.gd" id="1_xq6xo"]
[ext_resource type="TileSet" uid="uid://ceeprht6ct82e" path="res://TileSets/BaseTileSet.tres" id="2_pn8i2"]
[ext_resource type="PackedScene" uid="uid://82won0nixlfi" path="res://Scenes/Player.tscn" id="4_7gmai"]
[ext_resource type="Script" path="res://src/DialogTreeManager.gd" id="5_efbib"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xq6xo")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_pn8i2")
format = 2
layer_0/tile_data = PackedInt32Array(327685, 65536, 0, 327686, 0, 0, 262150, 0, 0, 196614, 0, 0, 131078, 0, 0, 65542, 65536, 0, 65541, 65536, 0, 131077, 65536, 0, 196613, 65536, 0, 262149, 65536, 0, 524294, 65536, 0, 524295, 65536, 0, 524296, 65536, 0, 524297, 65536, 0, 524298, 65536, 0, 524299, 65536, 0, 524293, 65536, 0, 524300, 65536, 0, 65548, 65536, 0, 131084, 65536, 0, 196620, 65536, 0, 262156, 65536, 0, 327692, 65536, 0, 393228, 65536, 0, 458764, 65536, 0, 65547, 65536, 0, 65546, 65536, 0, 65545, 65536, 0, 65544, 65536, 0, 65543, 65536, 0, 458757, 65536, 0, 393221, 65536, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 458762, 0, 0, 458761, 0, 0, 458760, 0, 0, 458759, 0, 0, 458758, 0, 0, 393222, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 393225, 0, 0, 393224, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 327689, 0, 0, 327688, 0, 0)

[node name="DialogTreeManager" type="Node" parent="."]
script = ExtResource("5_efbib")

[node name="GridContainer" type="GridContainer" parent="DialogTreeManager"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterBody2D2" parent="." instance=ExtResource("4_7gmai")]
position = Vector2(544, 352)

[connection signal="make_game_better" from="DialogTreeManager" to="." method="_on_dialog_tree_manager_make_game_better"]
[connection signal="quit_game" from="DialogTreeManager" to="." method="_on_dialog_tree_manager_quit_game"]
[connection signal="quit_override" from="CharacterBody2D2" to="." method="_on_character_body_2d_quit_override"]
